--- a/assets/main.css
+++ b/assets/main.css
@@ -52,3 +52,26 @@ body{
         display: block;
     }
 }
+
+
+.footer{
+    background-color: #EEEFFB;
+    padding: 50px 0;
+}
+.footer a,.address-info{
+    color: #8A8FB9;
+}
+
+.footer-item{
+    gap: 45px;
+}
+
+.footer .left-side{
+    gap: 35px;
+    align-items: flex-start;
+}
+
+.footer .right-side{
+    width: 60%;
+}
+
