--- a/assets/main.css
+++ b/assets/main.css
@@ -26,6 +26,8 @@ body{
 
 .search form{
     border: 2px solid #E7E6EF;
+    border-radius: 5px;
+    display: flex;
 }
 
 .search input{
@@ -45,7 +47,8 @@ body{
    
 
 @media screen and (max-width:1200px) {
-    .list,.search{
+    .list,
+    .header.search{
         display: none;
     }
     .bar{
@@ -58,20 +61,49 @@ body{
     background-color: #EEEFFB;
     padding: 50px 0;
 }
-.footer a,.address-info{
-    color: #8A8FB9;
+
+.footer .row{
+    gap: 30px;
 }
 
-.footer-item{
-    gap: 45px;
+.footer a,.address-info{
+    color: #8A8FB9;
 }
 
 .footer .left-side{
     gap: 35px;
     align-items: flex-start;
+    width:calc((100% - 30px)/2);
 }
 
 .footer .right-side{
     width: 60%;
+    width:calc((100% - 30px)/2);
 }
 
+.footer .right-side .row{
+    gap: 35px;
+    align-items: flex-start;
+}
+
+
+.footer-item{
+    gap: 45px;
+    width: calc((100% - 70px) / 3);
+}
+
+@media screen and (max-width:990px) {
+    .footer .left-side, .footer .right-side {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:570px) {
+    .footer{
+        text-align: center;
+    }
+    .footer-item{
+        width: 100%;
+    }
+    
+}
