--- a/assets/main.css
+++ b/assets/main.css
@@ -81,6 +81,107 @@ body{
 /* End Newsletter */
 
 
+/* Start Featured Product */
+
+.featured-product{
+    color: #1A0B5B;
+    padding: 50px 0;
+}
+
+.featured-product h2{
+    margin-bottom: 30px;
+}
+
+.featured-product .row{
+    justify-content: flex-start;
+    gap: 15px;
+}
+
+.product{
+    position: relative;
+}
+
+.badge-sale{
+    position: absolute;
+    top: -3px;
+    left: -5px;
+}
+
+.featured-product .product{
+    flex: 1 0 300px;
+    box-shadow: 0px 4px 4px #00000040;
+    border-radius: 4px;
+}
+
+.product .img{
+    background-color: #F6F7FB;
+    padding: 30px;
+}
+
+.product .img img{
+
+    height: 250px;
+    object-fit: contain;
+}
+
+.product-details{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    transition: all 0.6s;
+}
+
+.product:hover .product-details{
+    background-color: #2F1AC4;
+    border-radius: 2px;
+}
+
+.product-details h3{
+    color: var(--primary);
+}
+
+.product:hover .product-details h3{
+    color: #fff;
+    transition: 0.6s;
+}
+
+.color{
+    width: 20px;
+    height: 6px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.product:hover .color-three{
+    background-color: #FFEAC1;
+}
+
+.color-one{
+    background-color: #05E6B7;
+}
+
+.color-two{
+    background-color: #F701A8;
+}
+
+.color-three{
+    background-color: #00009D;
+    transition: all 0.6s;
+}
+
+.product-info span{
+    transition: all .9s;
+}
+
+.product:hover .product-info span{
+    color: #fff;
+}
+
+/* End Featured Product */
+
 
 
 /* Start Clients */
