--- a/assets/main.css
+++ b/assets/main.css
@@ -678,6 +678,118 @@ body{
 /* End Trending Products */
 
 
+/* Start Top Categories */
+
+.top-categories{
+    color: #1A0B5B;
+    padding: 50px 0;
+}
+
+.top-categories h2{
+    margin-bottom: 30px;
+}
+
+.top-categories .row{
+    justify-content: flex-start;
+    gap: 45px;
+}
+
+.top-categories .top-product{
+    box-shadow: 0px 4px 4px #00000040;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.top-product .img{
+    background-color: #F6F7FB;
+    padding: 45px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    transition: 0.4s;
+}
+
+
+.top-product .img img{
+    height: 250px;
+    object-fit: contain;
+} 
+
+.top-product .img .view-shop {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  opacity: 0;
+  background: #1ed760;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: all 0.4s;
+}
+
+.top-product:hover .img{
+  box-shadow: -5px 7px 2px 2px #9877E7;
+  border-radius: 50%;
+}
+
+.top-product:hover .view-shop {
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
+}
+
+.top-product-details{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    transition: all 0.6s;
+}
+
+@media screen and (max-width: 1300px) {
+  .top-categories .row {
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .top-categories .top-product {
+    flex: 1 0 30%;
+  }
+
+  .top-product .img img {
+    height: 200px;
+    width: 200px;
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 1201px) and (min-width: 750px) {
+  .top-categories .row {
+    align-items: center;
+    gap: 30px;
+  }
+  .top-product {
+    width:300px;
+  }
+}
+
+@media (max-width: 749px) {
+  .top-categories .row {
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+  .top-product {
+    width: 100%;
+    max-width: 350px;
+  }
+}
+
+/* End Top Categories */
+
+
 /* Start Newsletter */
 
 .newsletter{
